<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/text2"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text1"
        android:text="@string/hello_world"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:typeface="serif"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >
        <Spinner
            android:id="@+id/meter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/background_edittext"
            android:textColor="@color/red"/>
        <EditText
            android:id="@+id/first_person"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:hint="@string/name1"
            android:layout_above="@id/meter"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:maxLength="50"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/second_person"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:hint="@string/name2"
            android:layout_below="@id/meter"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:maxLength="50"
            android:background="@drawable/background_edittext"
            android:inputType="text" />
        <Button
            android:id="@+id/button_calculate"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:background="@drawable/button_custom"
            android:layout_below="@id/second_person"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:onClick="sendbutton"/>
    </RelativeLayout>
</LinearLayout>
